--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -39,7 +39,8 @@
 
 #navBar {
 	display: flex; 
-	justify-content: flex-start; 
+	justify-content: space-between; 
+	padding: 1rem 10rem;  
 	align-items: center; 
 	background-color: black; 
 	height: 2rem; 
